# CineReserve

./: .env.example  README.md  manage.py  pyproject.toml
CineReserve/: asgi.py  settings.py  urls.py  views.py  wsgi.py
movies/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
movies/management/commands/: seed_movies.py
movies/migrations/: 0001_initial.py  0002_movie_duration_minutes.py  0003_alter_movie_duration_minutes.py  0004_alter_movie_options_alter_session_options.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/auth/: login.html  register.html
templates/movies/: list.html
users/: serializers.py  views.py
